@@ -11,7 +11,6 @@ import net.minecraft.world.level.biome.Biome;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static net.minecraft.world.level.biome.Biome.BiomeCategory.*;
 
@@ -27,18 +26,15 @@ public class StoneLayerGeneration {
     public static List<BlockState> thinSlabBlocks = new ArrayList<>();
 
     public static void init() {
-        List<ITMaterial> stoneLayerList =  ((MaterialRegistry) IndustrialTech.configSync.material.getFirst()).getAllValues().stream().filter(i -> i.isStoneLayer != null && i.isStoneLayer).collect(Collectors.toList());
+        List<ITMaterial> stoneLayerList = ((MaterialRegistry) IndustrialTech.configSync.material.getFirst()).getAllValues().stream().filter(i -> i.isStoneLayer != null && i.isStoneLayer).toList();
         if(thinSlabBlocks.size() != stoneLayerList.size()){
-            for(int i = 0; i < stoneLayerList.size(); i++){
-                ITMaterial iStoneLayer = stoneLayerList.get(i);
-                Block replaceableBlock = iStoneLayer.thinSlabBlock;
+            for (ITMaterial iStoneLayer : stoneLayerList) {
+                Block replaceableBlock = iStoneLayer.thinSlabBlock.get();
 
-                if(replaceableBlock != null) {
-                    thinSlabBlocks.add(replaceableBlock.defaultBlockState());
-                }
+                thinSlabBlocks.add(replaceableBlock.defaultBlockState());
             }
         }
-        StoneLayerGenerationHandler.addThinSlabGenerate("thin_slab", thinSlabBlocks, 5000, true, false, List.of(Level.OVERWORLD), List.of(), List.of());
+        StoneLayerGenerationHandler.addThinSlabGenerate("thin_slab", thinSlabBlocks, 2, true, false, List.of(Level.OVERWORLD), List.of(), List.of());
     }
 
 
